src/index.css
@import url("https://fonts.googleapis.com/css2?family=Mulish&family=Poppins:wght@300;600&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&display=swap');
::-webkit-scrollbar{
  display: none;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* font-family: "Mulish", sans-serif; */
  overflow-x: hidden;
  z-index: 1;
}
body{
   font-family: "Mulish", sans-serif !important;
}
#refundheader{
  margin-top: 7rem !important;
  
}
NavLink.disabled{
  pointer-events: none;
}
.footer-link:hover{
text-decoration: underline !important;
transition: all 1s ease;
}
.refundheader{
  overflow: hidden;
  font-weight: 700;
  color: rgb(255, 255, 255) !important;
  text-shadow: 5px 5px 6px rgba(250, 250, 250, 0.359);
}
.herocontainer{
  margin-top: 9rem !important;
}

.navbar{
  padding: 0 !important;
}
.navbar-brand {
  font-size: 2.5rem !important;
  color: #800080 !important;
}
.bgback{
  background-image: linear-gradient(to bottom, #02041d 65%, #04619f);
}
.homesechead{
  overflow: hidden;
  /* margin-top: -10rem !important; */
  color: rgb(254, 255, 255);
  letter-spacing: 2px;
}
.homesechead hr{
  width: 15% !important;
}
.navbar a {
  font-size: 1.3rem;
  text-transform: capitalize;
}
.menu_active {
  font-weight: bold !important;
  border-bottom: 1px solid #565387 !important;
}
.blink {
  animation: blink-animation 1s steps(5, start) infinite;
  -webkit-animation: blink-animation 1s steps(5, start) infinite;
}
@keyframes blink-animation {
  to {
    visibility: hidden;
  }
}
@-webkit-keyframes blink-animation {
  to {
    visibility: hidden;
  }
}

.navbar a:hover {
  color: #3498db !important;
}
.brand-name {
  color: #ffffff;
  font-family: 'Alegreya SC', serif !important;
  font-style:italic;
}
.text-reset{
  text-decoration: none !important;
}

.footer-top{
  text-decoration: underline !important;
}
.serviceheader{
  margin-top: 10rem !important;
  color: turquoise;
}
.mainheader {
  /* margin-top: 10rem !important; */
  overflow: hidden;
  font-weight: 700;
  color: rgb(255, 255, 255) !important;
  text-shadow: 5px 5px 6px rgba(250, 250, 250, 0.359);
}
.subheader {
  overflow-y: hidden;
  color: #ffffff;
}
.btn-outline-primary {
  padding: 10px 30px;
  width: 11rem;
  height: auto;
  letter-spacing: 1px;
  outline: #ffffff !important;
  border-radius: 50px !important;
  transition: all 0.5s ease !important;
background-color: #fff !important;
  color: blue !important;
}

.btn-outline-primary:hover{
  background-color: transparent !important;
  color: #4f00fa!important;
  box-shadow:  30px 20px 20px rgba(0, 0, 0, 0.986);
}

.submitbtn{
  border: 1px solid black !important;
  font-weight: 900!important;
  background-color: #fff !important;
}

.content{
  color: rgb(255, 255, 255);
}

.image-fluid {
  /* margin-top: 6rem !important;
    margin-left: 3rem !important; */
    margin-top: 2rem !important;
  width: 90%;
  -webkit-animation: mover 1.6s infinite alternate-reverse both;
  animation: mover 1.6s infinite alternate-reverse both;
}
.card {
  border: 3px solid rgba(15, 52, 233, 0.54) !important;
  object-fit: cover !important;
  height: 35rem !important;
  background: transparent !important;
  color: #fff !important;
  scale: 0.9;
}
.card-text{
  /* color: #3498db; */
  color: lightblue;
  font-style: italic  !important;
}
.exphead{
  color: turquoise;
}
.tagline{
  color: rgb(166, 144, 255);
}
.card::-webkit-scrollbar{
  display: none !important;
}

.contactheader{
  overflow: hidden;
  text-align: center;
  margin-top: 7rem;
  margin-bottom: -2rem;
  color: turquoise;
}
.courseheader{
 padding-left: 8.5rem !important;
 margin-top: 2rem;
}
.coursetopic{
  color: #fff;
  margin-bottom: -2rem;
  letter-spacing: 1px;
}
.courseimg{
  width: 30% !important;
  margin-bottom: 1rem;
}

.coursecontent{
  color: turquoise;
  padding-bottom: 1rem;
  font-style: italic;
}

.card:hover {
  cursor: pointer;
  box-shadow: 50px 20px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
  transition: all 0.5s ease;
  overflow: hidden !important;
  scale: 1;
}

form {
  padding: 15px !important;
  border: .5px solid rgb(0, 68, 255) !important;
  background-color: #7c58e600;
  border-radius: 3%;
  margin-bottom: 3rem !important;
}
form input,
textarea {
  border: 1px solid #000 !important;
  outline: none;
}
label{
  color: whitesmoke;
}
#emailHelp{
  color: #ffffff78;
}
.imgarea{
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}
.certcont{
  width: 100% !important;
  display: flex !important;
  flex-wrap: wrap !important;
  flex-direction: row !important;
}

.certcont img{
  width: 30%;
  margin: 20px;
  z-index: 1 !important;
}

.certcont img:hover{
  background-color: rgba(33, 0, 75, 0.999);
  transition: .7s;
  cursor: pointer;
  transform: scale(1.05);
}

.container-fluid .popup-image{
  position: fixed;
  top: 0; left: 0;
  background:rgba(0, 0, 0, .9) ;
  height: 100%;
  width: 100%;
  z-index: 100;
}

.container-fluid .popup-image span{
  position: absolute;
  top:0; right: 0;
  font-size: 60px;
  font-weight: bolder;
  cursor:pointer;
  color: yellow;
  z-index: 100;
  transform: translate(-2rem, 4rem);
}

.container-fluid .popup-image img{
  position: absolute;
  top:50%; left: 50%;
  transform: translate(-50%, -50%);
  border: 5px solid #fff;
  border-radius: 5px;
  width: 460px;
  margin-top: 1rem;
  object-fit: cover;

}






.card-img-top {
  width: 100% !important;
  height: 26rem !important ;
  object-fit: cover;
  border-bottom: 1px solid #000;
}
.thirdimg{
  padding: 0!important;
  opacity: 0.7;
  width: 100% !important;
  margin-top: -2rem !important;
}
footer{
    position: sticky !important;
    top: calc( 100vh - 100px ) !important;
}

@-webkit-keyframes mover {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-10px);
  }
}
@keyframes mover {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-10px);
  }
}


/* Responsive Code */

@media (max-width: 991px) {
  .navbar-brand{
        font-size: 1.5rem !important;
    }
  .menu_active {
    font-weight: bold !important;
    border-bottom: none !important;
  }
}
@media (max-width: 768px) {
  #header {
    margin-top: 1px;
  }
  #header h1 {
    font-size: 28px;
  }
  #header h2 {
    font-size: 18px;
    margin-bottom: 30;
  }
  #header .header-img img{
    width: 70px;
  }
}
@media (max-width: 420px) {
  .card-img-top {
    height: 16.5rem !important;
    width: 100% !important;
    object-fit: cover !important;
  }
    .navbar-brand{
    font-size: 1.4rem !important;
}
.nav-logo{
  width: 80px !important;
}
.homesechead hr{
  width: 60% !important;
}
.card-text{
  overflow: hidden !important;
}
.card{
  height: 490px !important;
  scale: 1 !important;
}
.mainheader{
  text-shadow: 5px 5px 5px rgba(250, 250, 250, 0.288);
}
.certcont{
  flex-direction: column !important;
  justify-content: center;
  align-items: center;
  width: 100% !important;
}

.certcont img{
  width: 100%;
  margin: 10px;
}
.certcont img:hover{
  transition: .7s;
  transform: scale(1.02);
}


.herocontainer{
  margin-top: 2rem !important;
}
.container-fluid .popup-image img{
  width: 350px;
}
.container-fluid .popup-image span{
  transform: translate(-15px,20px);
}
.bgback{
  background-image: linear-gradient(to bottom, #02041d 30%, #04619f);
}
.courseheader{
  padding-left: 3rem !important;
 }
 .courseimg{
  width: 100% !important;
}
.thirdimg{
  width: 100% !important;
  opacity: 1;
}
.mainheader{
  text-shadow: 5px 5px 5px rgba(250, 250, 250, 0.526);
}
}

